ported flybytes project to maven and upgraded to latest Rascal API, rewrite AbstractFunction to IFunction in Mirror